Fixed *Playground* editor height and header bar visibility on small screens.

--- a/source/_inc/layouts/side_drawer/style.css
+++ b/source/_inc/layouts/side_drawer/style.css
@@ -207,6 +207,7 @@
 
     .header-menu-button {
         cursor: pointer;
+        pointer-events: all!important;
         height: 48px!important;
         width: 48px!important;
     }
